--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
   <body>
     <div id="app">
       <%= render 'layouts/header' %>
-      <div id="page">
+      <div id="page_content">
         <%= yield %>
       </div>
     </div>
