--- a/app/assets/stylesheets/theme.scss
+++ b/app/assets/stylesheets/theme.scss
@@ -1,27 +1,60 @@
-@font-face{
-	font-family: '';
-}
+$header_height: 80px;
+$general_color: #003cff;
+
+/*
+FARDiplomat: Paragraphs;
+Gandom: Headers;
+Samim: Other;
+*/
 
 *{
 	margin: 0;
 	padding: 0;
 	box-sizing: border-box;
+	user-select: none;
 }
-
 body{
-	background: #fff;
+	background: #f3f4f6;
+	font-family: 'Poppins', 'FARDiplomat';
+	a{
+		text-decoration: none;
+		color: $general_color;
+	}
 }
-
 #header{
 	position: fixed;
+	z-index: 70;
 	top: 0;
 	right: 0;
 	left: 0;
 	width: 100%;
-	height: 80px;
-	background: #2a2e35;
+	height: $header_height;
+	background: #252b33;
 	color: #dadada;
+	direction: rtl;
 	#brand{
-		color: #003cff;
+		position: relative;
+		top: 17px;
+		right: 10px;
+		color: #fff;
+		font-family: 'Comfortaa';
+		padding: 6px 5px;
+		display: inline-block;
+		cursor: pointer;
 	}
+	#navbar{
+		position: relative;
+		top: 17px;
+		float: left;
+		width: calc(100% - 208px);
+		height: 45px;
+		display: flex;
+		align-items: center;
+		justify-content: space-between;
+		padding-left: 25px;
+		direction: ltr;
+	}
+}
+#page_content{
+	margin-top: $header_height;
 }
