--- a/app/views/users/forgot_password.html.erb
+++ b/app/views/users/forgot_password.html.erb
@@ -1,2 +1,34 @@
-<h1>Users#forgot_password</h1>
-<p>Find me in app/views/users/forgot_password.html.erb</p>
+<div class="form center_form">
+	<% sended_successfully = true %>
+	
+	<% if sended_successfully %>
+		<div style="text-align: center;">
+			<h3 class="form_title">فرمواش گذرواژه</h3>
+
+			<div style="width: 100%; display: block; margin-bottom: 10px;">
+				<%= image_tag '/images/mail_sent.svg', :style => 'width: 80px;', :alt => "mail sent" %>
+			</div>
+
+			<span dir="rtl">لینک تایید با موفقیت ارسال شد.</h3>
+
+			<div style="width: 100%; display: block; margin-top: 18px; margin-bottom: 10px;">
+				<%= link_to 'صفحه ورود', users_signin_path, :class => "btn btn-primary btn-large-padding" %>
+			</div>
+		</div>
+	<% else %>
+		<h3 class="form_title">فرمواش گذرواژه</h3>
+
+		<div class="input">
+			<label for="username">ایمیل شما</label>
+			<input type="text">
+		</div>
+
+		<!-- <div class="form_error_list">
+			<div class="item">نام کاربری یا گذرواژه شما صحیح نمی باشد</div>		
+		</div> -->
+
+		<div style="width: 100%; display: block; text-align: left;">
+			<button type="submit" class="btn btn-primary btn-large-padding">ارسال لینک تایید</button>
+		</div>
+	<% end %>
+</div>
