--- a/app/assets/stylesheets/forms.scss
+++ b/app/assets/stylesheets/forms.scss
@@ -1,10 +1,11 @@
 .form{
 	position: relative;
-	width: 400px;
+	width: 450px;
 	background: #fff;
-	border-radius: 5px;
+	border-radius: 19px;
 	box-shadow: 0px 0px 0px 1rem rgba(255, 255, 255, 0.5);
 	padding: 10px 23px;
+	padding-bottom: 19px;
 	text-align: right;
 	.form_title{
 		width: 100%;
