--- a/app/assets/stylesheets/theme.scss
+++ b/app/assets/stylesheets/theme.scss
@@ -1,5 +1,4 @@
 $header_height: 80px;
-$general_color: #003cff;
 
 /*
 FARDiplomat: Paragraphs;
@@ -14,11 +13,20 @@ Samim: Other;
 	user-select: none;
 }
 body{
-	background: #f3f4f6;
-	font-family: 'Poppins', 'FARDiplomat';
+	background: #edeef0;
+	font-family: 'Poppins', 'Samim';
 	a{
 		text-decoration: none;
-		color: $general_color;
+		color: #003cff;
+	}
+	.link{
+		color: #777;
+		font-family: 'Poppins', 'Gandom';
+		font-size: 16px;
+		transition: 0.3s ease;
+		&:hover, &:focus{
+			color: #003cff;		
+		}
 	}
 }
 #header{
@@ -36,7 +44,7 @@ body{
 		position: relative;
 		top: 17px;
 		right: 10px;
-		color: #fff;
+		color: #003cff;
 		font-family: 'Comfortaa';
 		padding: 6px 5px;
 		display: inline-block;
@@ -57,4 +65,39 @@ body{
 }
 #page_content{
 	margin-top: $header_height;
+}
+.sepa{
+	position: relative;
+	content: '';
+	margin: 10px 0;
+	display: block;
+	width: 100%;
+	height: 1px;
+	background: #ddd;
+}
+.link_row{
+	.link{
+		width: 100%;
+		display: block;
+	}
+}
+h1, h2, h3, h4, h5, b, span, small{
+	direction: rtl;
+	margin: 0;
+	padding: 0;
+}
+.container{
+	position: relative;
+	top: $header_height;
+	padding: 20px 90px;
+	.content{
+		.container_title{
+			font-size: 32px;
+		}
+	}
+}
+@media screen and (max-width: 1100px) {
+	.container{
+		padding: 20px 20px;
+	}
 }
