--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,2 +1,37 @@
-<h1>Articles#index</h1>
-<p>Find me in app/views/articles/index.html.erb</p>
+<div id="articles_list">
+	<% 10.times do %>
+		<div class="article_box">
+			<div class="image cover">
+				<img src="https://picsum.photos/700/400">
+			</div>
+			<h3 class="title">آموزش نصب فلاسک در پایتون</h3>
+			<p class="desc">
+				درین مقاله میخواییم بریم سراغ نصب فلاسک در پایتون و یه سرور ساده بزنیم.
+			</p>
+			<div class="footer" style="display: flex; justify-content: space-between;" dir="ltr">
+				<div>
+					<span class="author">
+						طاها دوستی فام 
+						<span class="icon">
+							<ion-icon name="person-outline"></ion-icon>
+						</span>
+					</span>
+				</div>
+				<div>
+					<span class="comments_count">
+						2 
+						<span class="icon">
+							<ion-icon name="chatbubble-outline"></ion-icon>
+						</span>
+					</span>
+					<span class="article_submit_time">
+						1400/4/23 
+						<span class="icon">
+							<ion-icon name="calendar-outline"></ion-icon>
+						</span>
+					</span>
+				</div>
+			</div>
+		</div>
+	<% end %>
+</div>
