--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,2 +1,27 @@
-<h1>Articles#show</h1>
-<p>Find me in app/views/articles/show.html.erb</p>
+<div id="view_article">
+    <div class='article_box'>
+        <div style="display: block; width: 100%; margin-bottom: 10px;">
+            <h1 class='title' dir="rtl" style="margin-bottom: 10px;">آموزش نصب فلاسک در پایتون</h3>
+            <span class="article_submit_time" dir="ltr">
+                <span class='icon'>
+                    <ion-icon name='calendar-outline'></ion-icon>
+                </span>
+                1400/4/23 
+            </span>
+        </div>
+        <div class='image cover'>
+            <img src='https://picsum.photos/2000/1200' class='' onload='imagePreloader(this)'>
+        </div>
+        <div class="content" style="margin: 10px 0;" dir="rtl">
+            این پست مقاله است والسلام.
+        </div>
+        <div class="author_row">
+            <div class="icon">
+                <ion-icon name="person-outline"></ion-icon>
+            </div>
+            <div class="value">
+                طاها دوستی فام
+            </div>
+        </div>
+    </div>
+</div>
