--- a/app/views/introduction/about_us.html.erb
+++ b/app/views/introduction/about_us.html.erb
@@ -1,2 +1,4 @@
-<h1>Introduction#about_us</h1>
-<p>Find me in app/views/introduction/about_us.html.erb</p>
+<div class="container" style="top:  20px;">
+    <h2 class="container_title">درباره ما</h2>
+    <div class="sepa"></div>
+</div>
