--- a/app/views/introduction/index.html.erb
+++ b/app/views/introduction/index.html.erb
@@ -1,2 +1,1 @@
-<h1>Introduction#index</h1>
-<p>Find me in app/views/introduction/index.html.erb</p>
+<h1 style="width: 100%; text-align: center; margin-top: 140px; font-size: 17px;">طراحی این بخش به اتمام نرسیده است.</h1>
