--- a/app/assets/stylesheets/articles.scss
+++ b/app/assets/stylesheets/articles.scss
@@ -1,10 +1,13 @@
 #articles_list{
 	width: 100%;
 	display: grid;
-	grid-template-columns: calc(100% / 3 - 10px) calc(100% / 3 - 10px) calc(100% / 3 - 10px);
-	grid-gap: 10px;
+	grid-template-columns: calc(100% / 3 - 15px) calc(100% / 3 - 15px) calc(100% / 3 - 15px);
+	grid-gap: 15px;
 	direction: rtl;
 	.article_box{
+		.title{
+			color: #000;
+		}
 		.cover{
 			width: 100%;
 			height: 230px;
@@ -13,6 +16,27 @@
 		width: 100%;
 		.desc{
 			color: #777;
+		}
+		.footer{
+			margin-top: 4px;
+			display: block;
+			.author, .comments_count, .article_submit_time{
+				position: relative;
+				color: #003cff;
+				padding-right: 22px;
+				.icon{
+					position: absolute;
+					font-size: 19px;
+					right: 0;
+				}
+			}
+			.article_submit_time{
+				font-family: sans-serif;
+			}
+			.comments_count{
+				padding-right: 20px;
+				margin-right: 10px;
+			}
 		}
 	}	
 }
@@ -24,5 +48,45 @@
 @media screen and (max-width: 720px) {
 	#articles_list{
 		grid-template-columns: 100%;
+		grid-gap: 15px;
+	}
+}
+#view_article{
+	text-align: right;
+	.cover{
+		height: 500px;
+	}
+	.article_submit_time{
+		font-family: sans-serif;
+		.icon{
+			position: relative;
+			top: 3px;
+			font-size: 20px;
+		}
+		padding-bottom: 3px;
+	}
+	.author_row{
+		// remove box-shadow virtual margins...
+		width: calc(100% - 1rem);
+		margin: 20px 0;
+		margin-left: 0.5rem;
+		display: block;
+		background: #fff;
+		border-radius: 7px;
+		box-shadow: 0px 0px 0px 0.5rem rgba(255, 255, 255, 0.5);
+		padding: 10px 23px;
+		color: #000;
+		position: relative;
+		.icon{
+			position: absolute;
+			right: 0;
+			font-size: 20px;
+			display: inline-block;
+			margin-right: 13px;
+		}
+		.value{
+			padding-right: 19px;
+			display: inline-block;	
+		}
 	}
 }
