--- a/app/assets/stylesheets/forms.scss
+++ b/app/assets/stylesheets/forms.scss
@@ -1,6 +1,6 @@
 .form{
 	position: relative;
-	width: 450px;
+	width: 100%;
 	background: #fff;
 	border-radius: 19px;
 	box-shadow: 0px 0px 0px 1rem rgba(255, 255, 255, 0.5);
@@ -18,6 +18,7 @@
 .center_form{
 	position: relative;
 	display: block;
+	width: 600px;
 	left: 50%;
 	transform: translate(-50%);
 	top: 90px;
@@ -34,5 +35,11 @@
 		color: red;
 		font-size: 14px;
 		font-family: 'Poppins', 'Gandom';
+	}
+}
+@media screen and (max-width: 720px) {
+	.center_form{
+		top: 30px;
+		width: 88%;
 	}
 }
