--- a/app/assets/stylesheets/images.scss
+++ b/app/assets/stylesheets/images.scss
@@ -4,16 +4,18 @@
 	animation-name: image_preloader_animation;
 	animation-duration: 3s;
 	background: #ddd;
-    border-radius: 7px;
     animation-name: image_preloader_animation;
     animation-duration: 1.7s;
     animation-iteration-count: infinite;
     animation-timing-function: ease;
+    border-radius: 7px;
 	img{
 		opacity: 0;
 		width: 100%;
 		height: 100%;
+		object-fit: cover;
 		transition: 0.3s ease;
+		border-radius: 7px;
 		&.loaded{
 			opacity: 1;
 		}
