--- a/app/views/users/signup.html.erb
+++ b/app/views/users/signup.html.erb
@@ -1,10 +1,17 @@
 <div class="form center_form">
-	<h3 class="form_title">ثبت نام</h3>
+	<div style="display: flex; justify-content: space-between; width: 100%; height: 42px;">
+		<div class="btn btn-primary">
+			<ion-icon name="git-branch-outline"></ion-icon>
+		</div>
+		<div>
+			<h3 class="form_title">ثبت نام</h3>
+		</div>
+	</div>
 
 	<div class="input">
-		<label for="username">نام و نام خانوادگی</label>
+		<label for="text">نام و نام خانوادگی</label>
 		<input type="text">
-		<small>مثال: طاها ذوستی فام</small>
+		<small>مثال: طاها دوستی فام</small>
 	</div>
 	<div class="input">
 		<label for="email">ایمیل</label>
@@ -25,6 +32,7 @@
 		<label for="username">تکرار گذرواژه</label>
 		<input type="password">
 	</div>
+
 	<!-- <div class="form_error_list">
 		<div class="item">نام کاربری یا گذرواژه شما صحیح نمی باشد</div>		
 	</div> -->
