working on UserMailer service

--- a/app/assets/stylesheets/buttons.scss
+++ b/app/assets/stylesheets/buttons.scss
@@ -29,6 +29,12 @@
 		&:hover{
 			background: #003cff;
 		}
+		&.btn-mute{
+			&:hover, &:focus, &.active {
+				background: #252b33;
+				color: #fff;
+			}	
+		}
 	}
 	&.btn-large-padding{
 		padding: 10px 25px;
