--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -3,13 +3,30 @@
 	
 	<div id="navbar" class="navbar">
 		<div id="navbar-left">
-			<%= link_to "ورود", users_signin_path, :class => "btn btn-secondary" %>
-			<%= link_to "ثبت نام", users_signup_path, :class => "btn btn-secondary" %>
+			<% unless session[:user].present? %>
+				<%= link_to "ورود", users_signin_path, :class => "btn btn-secondary" %>
+				<%= link_to "ثبت نام", users_signup_path, :class => "btn btn-secondary" %>
+			<% else %>
+				<div class="dropdown">
+					<div class="button">
+						<div class="inline_avatar">
+							<div class="avatar">
+								<%= session[:user]['full_name'][0] %>
+							</div>
+							<span class="value"><%= session[:user]['full_name'] %></span>
+						</div>
+					</div>
+					<div class="content">
+						<div class="item">ناحیه کاربری</div>
+						<%= link_to 'خروج از حساب کاربری', users_logout_url, :class => "item" %>
+					</div>
+				</div>
+			<% end %>
 		</div>
-		<div id="navbar-right" dir="rtl">
-			<a class="btn btn-secondary btn-mute"><del>دوره ها</del></a>
-			<%= link_to 'مقالات', articles_index_path, :class => "btn btn-secondary" %>
+		<div id="navbar-right">
 			<%= link_to 'درباره ما', introduction_about_us_path, :class => "btn btn-secondary" %>
+			<%= link_to 'مقالات', articles_index_path, :class => "btn btn-secondary" %>
+			<a class="btn btn-secondary btn-mute"><del>دوره ها</del></a>
 		</div>
 	</div>
 </div>
