--- a/app/views/users/signin.html.erb
+++ b/app/views/users/signin.html.erb
@@ -1,22 +1,28 @@
 <div class="form center_form">
 	<h3 class="form_title">ورود</h3>
 
-	<div class="input">
-		<label for="username">نام کاربری</label>
-		<input type="text">
-	</div>
-	<div class="input">
-		<label for="username">گذرواژه</label>
-		<input type="password">
-	</div>
+	<%= form_with model: @user, url: {:action => 'submit_signin'}, method: :post do |f| %>
+		<div class="input">
+			<%= f.label :username, 'نام کاربری' %>
+			<%= f.text_field :username %>
+		</div>
+		<div class="input">
+			<%= f.label :password, 'گذرواژه' %>
+			<%= f.password_field :password %>
+		</div>
 
-	<!-- <div class="form_error_list">
-		<div class="item">نام کاربری یا گذرواژه شما صحیح نمی باشد</div>		
-	</div> -->
+		<% unless flash[:signin_errors_list].nil? %>
+			<% flash[:signin_errors_list].each do |e| %>
+				<div class="form_error_list">
+					<div class="item"><%= e %></div>
+				</div>
+			<% end %>
+		<% end %>
 
-	<div style="width: 100%; display: block; text-align: left;">
-		<button type="submit" class="btn btn-primary btn-large-padding">ورود</button>
-	</div>
+		<div style="width: 100%; display: block; text-align: left;">
+			<%= f.submit 'ورود', :class => "btn btn-primary btn-large-padding" %>
+		</div>
+	<% end %>
 	
 	<div class="sepa"></div>
 
