--- a/app/assets/stylesheets/theme.scss
+++ b/app/assets/stylesheets/theme.scss
@@ -6,127 +6,136 @@ Gandom: Headers;
 Samim: Other;
 */
 
-*{
-	margin: 0;
-	padding: 0;
-	box-sizing: border-box;
-	user-select: none;
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    user-select: none;
 }
-body{
-	background: #edeef0;
-	font-family: 'Poppins', 'Samim';
-	a{
-		text-decoration: none;
-		color: #003cff;
-	}
-	.link{
-		color: #777;
-		font-family: 'Poppins', 'Gandom';
-		font-size: 16px;
-		transition: 0.3s ease;
-		&:hover, &:focus{
-			color: #003cff;		
-		}
-	}
+body {
+    background: #edeef0;
+    font-family: "Poppins", "Samim";
+    a {
+        text-decoration: none;
+        color: #003cff;
+    }
+    .link {
+        color: #777;
+        font-family: "Poppins", "Gandom";
+        font-size: 16px;
+        transition: 0.3s ease;
+        &:hover,
+        &:focus {
+            color: #003cff;
+        }
+    }
 }
-#header{
-	position: fixed;
-	z-index: 70;
-	top: 0;
-	right: 0;
-	left: 0;
-	width: 100%;
-	height: $header_height;
-	background: #252b33;
-	color: #dadada;
+#header {
+    position: fixed;
+    z-index: 70;
+    top: 0;
+    right: 0;
+    left: 0;
+    width: 100%;
+    height: $header_height;
+    background: #252b33;
+    color: #dadada;
+    // rtl
+    // direction: rtl;
+    #brand {
+        position: relative;
+        top: 17px;
+        left: 15px;
+        color: #003cff;
+        font-family: "Comfortaa";
+        padding: 6px 5px;
+        display: inline-block;
+        cursor: pointer;
+    }
+    #navbar {
+        position: relative;
+        top: 17px;
 
-	// rtl
-	// direction: rtl;
-	#brand{
-		position: relative;
-		top: 17px;
-		left: 20px;
-		color: #003cff;
-		font-family: 'Comfortaa';
-		padding: 6px 5px;
-		display: inline-block;
-		cursor: pointer;
-	}
-	#navbar{
-		position: relative;
-		top: 17px;
+        // rtl
+        float: right;
+        padding-right: 22px;
 
-		// rtl
-		float: right;
-		padding-right: 22px;
+        width: calc(100% - 215px);
+        height: 45px;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        direction: rtl;
 
-		width: calc(100% - 215px);
-		height: 45px;
-		display: flex;
-		align-items: center;
-		justify-content: space-between;
-		direction: rtl;
-
-		.inline_avatar{
-			top: .5px;
-			padding-right: 5px;
-		}
-	}
+        .inline_avatar {
+            top: 0.5px;
+            padding-right: 5px;
+        }
+    }
 }
-#page_content{
-	margin-top: $header_height;
+#page_content {
+    margin-top: $header_height;
 }
-.sepa{
-	position: relative;
-	content: '';
-	margin: 10px 0;
-	display: block;
-	width: 100%;
-	height: 1px;
-	background: #ddd;
+.sepa {
+    position: relative;
+    content: "";
+    margin: 10px 0;
+    display: block;
+    width: 100%;
+    height: 1px;
+    background: #ddd;
 }
-.link_row{
-	.link{
-		width: 100%;
-		display: block;
-	}
+.link_row {
+    .link {
+        width: 100%;
+        display: block;
+    }
 }
-h1, h2, h3, h4, h5, b, span, small{
-	direction: rtl;
-	margin: 0;
-	padding: 0;
+h1,
+h2,
+h3,
+h4,
+h5,
+b,
+span,
+small {
+    direction: rtl;
+    margin: 0;
+    padding: 0;
 }
-.container{
-	position: relative;
-	top: $header_height;
-	padding: 20px 90px;
-	.content{
-		.container_title{
-			font-size: 32px;
-			margin-bottom: 10px;
-		}
-	}
+.container {
+    position: relative;
+    top: $header_height;
+    padding: 20px 90px;
+    .container_title {
+        font-size: 27px;
+        margin-bottom: 10px;
+        &.bb{
+            border-bottom: 1px solid #ddd;
+        }
+    }
 }
 @media screen and (max-width: 1100px) {
-	.container{
-		padding: 20px 20px;
-	}
+    .container {
+        padding: 20px 20px;
+    }
 }
-.inline_avatar{
-	position: relative;
-	.avatar, .value{
-		display: inline-block;
-	}
-	.avatar{
-		--size: 45px;
-		width: var(--size);
-		height: var(--size);
-		background: rgb(17, 24, 39);
-		border-radius: 50px;
-		text-align: center;
-    	padding-top: 10px;
-	}
-	.value{
-		margin-right: 7px;
-	}
+.inline_avatar {
+    position: relative;
+    .avatar,
+    .value {
+        display: inline-block;
+    }
+    .avatar {
+        --size: 45px;
+        width: var(--size);
+        height: var(--size);
+        background: rgb(17, 24, 39);
+        border-radius: 50px;
+        text-align: center;
+        padding-top: 10px;
+    }
+    .value {
+        margin-right: 7px;
+    }
 }
