--- a/app/views/introduction/about_us.html.erb
+++ b/app/views/introduction/about_us.html.erb
@@ -1,4 +1,3 @@
-<div class="container" style="top:  20px;">
-    <h2 class="container_title">درباره ما</h2>
-    <div class="sepa"></div>
+<div class="container" style="top: 0px">
+    <h2 class="container_title bb">درباره ما</h2>
 </div>
