--- a/app/assets/stylesheets/theme.scss
+++ b/app/assets/stylesheets/theme.scss
@@ -110,6 +110,7 @@ small {
     .container_title {
         font-size: 27px;
         margin-bottom: 10px;
+        padding-bottom: 5px;
         &.bb{
             border-bottom: 1px solid #ddd;
         }
