--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -17,7 +17,7 @@
 						</div>
 					</div>
 					<div class="content">
-						<div class="item">ناحیه کاربری</div>
+						<%= link_to 'ناحیه کاربری', dashboard_index_url, :class => "item" %>
 						<%= link_to 'خروج از حساب کاربری', users_logout_url, :class => "item" %>
 					</div>
 				</div>
