--- a/app/views/users/signup.html.erb
+++ b/app/views/users/signup.html.erb
@@ -64,6 +64,8 @@
 			<span dir="rtl">
 				ثبت نام با موفقیت انجام شد
 				<br>
+				ایمیل حاوی لینک تایید به ایمیل شما ارسال شد
+				<br>
 				پوشه (spam) را حتمی بررسی کنید.
 			</span>
 		</div>
