--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -1,39 +1,37 @@
-<div class="container">
-    <div id="dashboard_panel">
-        <div class="covered_avatar">
-            <div class="avatar">
-                <div class="block_avatar">
-                    <div class="avatar">
-                        <%= session[:user]['full_name'][0] %>
-                    </div>
-                    <span class="value"><%= session[:user]['full_name'] %></span>
-                    <%= link_to 'خروج از حساب کاربری', users_logout_url, :class => "link" %>
-                </div>
+<div class="content_box">
+    <h4 class="header">اطلاعات حساب کاربری</h4>
+    <div class="form">
+        <%= form_with model: @user, url: {:action => 'edit_profile'}, method: :post do |f| %>
+            <div class="input" style="margin-right: 5px;">
+                <%= f.label :full_name, 'نام و نام خانوادگی' %>
+                <%= f.text_field :full_name %>
             </div>
-        </div>
-        <div id="dashboard_nav">
-            <%= active_link_to 'اطلاعات حساب کاربری', dashboard_index_url, :class => 'link' %>
-        </div>
-    </div>
-    <div id="dashboard_content">
-        <div class="content_box">
-            <h4 class="header">اطلاعات حساب کاربری</h4>
-            <div class="form">
+            <div class="flex_row">
                 <div class="input" style="margin-right: 5px;">
-                    <label class="label">نام و نام خانوادگی</label>
-                    <input type="text">
+                    <%= f.label :username, 'نام کاربری' %>
+                    <%= f.text_field :username, :readonly => true %>
                 </div>
-                <div class="flex_row">
-                    <div class="input" style="margin-right: 5px;">
-                        <label class="label">نام کاربری</label>
-                        <input type="text" readonly>
-                    </div>
-                    <div class="input" style="margin-left: 5px;">
-                        <label class="label">ایمیل</label>
-                        <input type="text" readonly>
-                    </div>
+                <div class="input" style="margin-left: 5px;">
+                    <%= f.label :email, 'ایمیل' %>
+                    <%= f.text_field :email, :readonly => true %>
                 </div>
             </div>
-        </div>
+
+            <% unless flash[:edit_profile_errors].nil? %>
+                <% flash[:edit_profile_errors].each do |e| %>
+                    <div class="form_error_list">
+                        <div class="item"><%= e %></div>
+                    </div>
+                <% end %>
+            <% end %>
+
+            <% unless flash[:edit_profile_success].nil? %>
+                <span class="success_message"><%= flash[:edit_profile_success] %></span>
+            <% end %>
+
+            <div style="width: 100%; text-align: left;">
+                <%= f.submit 'ثبت', :class => "btn btn-primary btn-large-padding" %>
+            </div>
+        <% end %>
     </div>
 </div>
