edit_profile url changed

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -17,7 +17,7 @@
 						</div>
 					</div>
 					<div class="content">
-						<%= active_link_to 'ناحیه کاربری', dashboard_index_url, :class => "item" %>
+						<%= active_link_to 'ناحیه کاربری', dashboard_edit_profile_url, :class => "item" %>
 						<%= active_link_to 'خروج از حساب کاربری', users_logout_url, :class => "item" %>
 					</div>
 				</div>
@@ -84,7 +84,7 @@
 					ناحیه کاربری
 				</span>
 			</div>
-			'), dashboard_index_url %>
+			'), dashboard_edit_profile_url %>
 		<% end %>
 	</div>
 </div>
