--- a/app/views/layouts/dashboard.html.erb
+++ b/app/views/layouts/dashboard.html.erb
@@ -23,7 +23,7 @@
                     </div>
                 </div>
                 <div id="dashboard_nav">
-                    <%= link_to 'اطلاعات حساب کاربری', dashboard_index_url, :class => 'link' %>
+                    <%= link_to 'اطلاعات حساب کاربری', dashboard_edit_profile_url, :class => 'link' %>
                     <%= link_to 'تغییر رمز عبور', root_path, :class => 'link' %>
                     <%#= link_to 'دوره هایی که شرکت میکنم', root_path, :class => 'link' %>
                 </div>
